Added JWT support to Identity API

--- a/src/services/NSE.Identity.API/appsettings.json
+++ b/src/services/NSE.Identity.API/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "",
+    "ExpirationHours": 2,
+    "Issuer": "",
+    "ValidIn": []
+  }
 }
