Refactored MVC Urls to use appsetting.json configurations

--- a/src/web/NSE.WebApp.MVC/appsettings.json
+++ b/src/web/NSE.WebApp.MVC/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AuthenticationAPI": {
+    "BaseUrl": "",
+    "AuthenticatePath": "",
+    "NewAccountPath": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
