--- a/src/services/NSE.Identity.API/NSE.Identity.API.csproj
+++ b/src/services/NSE.Identity.API/NSE.Identity.API.csproj
@@ -23,4 +23,10 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="appsettings.Development.json">
+	    <DependentUpon>appsettings.json</DependentUpon>
+	  </Content>
+	</ItemGroup>
+
 </Project>
