--- a/src/services/NSE.Catalogue.API/NSE.Catalogue.API.csproj
+++ b/src/services/NSE.Catalogue.API/NSE.Catalogue.API.csproj
@@ -38,6 +38,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\building blocks\NSE.Core\NSE.Core.csproj" />
+		<ProjectReference Include="..\..\building blocks\services\NSE.WebAPI.Core\NSE.WebAPI.Core.csproj" />
 	</ItemGroup>
 
 </Project>
